tests/data/invalid/unknown_property_kind.extxyz
1
Properties=species:Q:1:pos:R:3
H 0.0 0.0 0.0
